test/ui/tests/packages/undefined-provider/package.stderr
error: `weird$` is not a valid dependency provider
  --> ${TEST_FOLDER}/packages/undefined-provider/package.metadata:12:56
   |
12 |             something: { component: "else", provider: "weird$" },
   |                                                        ^^^^^^ 
   |
  note: valid providers are `filesystem`, `distribution`, `git`, `registry` and `package`

error: aborting due to previous error

